example-3/K8S/Services/Orders/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  selector:
    matchLabels:
      app: orders-deployment
  template:
    metadata:
      labels:
        app: orders-deployment
    spec:
      containers:
        - name: orders-deployment
          image: leandroalves86/kafka.estudos.orders:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
