example-3/K8S/Services/Orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-deployment
  ports:
  - port: 80
    targetPort: 80
