example-3/K8S/Services/Orders/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
  labels:
    name: orders-ingress
spec:
  rules:
  - host: orders.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: orders-service
            port: 
              number: 80
